의상 관련 폴더 번역

--- a/ERB/구상/女性汎用口上/KOJO_0_16_真面目.ERB.ORG
+++ b/ERB/구상/女性汎用口上/KOJO_0_16_真面目.ERB.ORG
@@ -127,7 +127,7 @@ ELSEIF ABL:노출벽 >= 3
 	PRINTFORML  人の気配すらない裏路地に足音だけが響いている。
 	PRINTFORML  全身に珠のような汗を浮かべ、表情を引き攣らせた%CALLNAME%が
 	PRINTFORML  周囲の気配を伺いながら息を切らせて駆けてゆく。
-	PRINTFORML  身に着けているものはソックスと靴だけ、少女の肢体を隠すものは何一つ無い。
+	PRINTFORML  身に着けているものは삭스と靴だけ、少女の肢体を隠すものは何一つ無い。
 	PRINTFORML  もしもこんな姿を誰かに見られでもしたら……
 	IF RAND:2 == 0
 		PRINTFORML  %타겟은% 熱に冒されたように頬を染め、興奮に身を晒しながら更に足を早めた。
