--- a/ERB/구상/女性汎用口上/KOJO_0_16_真面目.ERB.ORG
+++ b/ERB/구상/女性汎用口上/KOJO_0_16_真面目.ERB.ORG
@@ -5392,7 +5392,7 @@ PRINTFORML 「……ぅ、うぅ、め、牝豚……の……無様な姿…も
 PRINTFORML  恥辱に耐え切れず、%CALLNAME%の心は折れてしまった……
 
 
-;心境変化関連
+;심경 변화関連
 
 ;倒錯
 ;--------------------------------------------------
@@ -5670,7 +5670,7 @@ ELSEIF TALENT:처녀 > 0
 		ENDSELECT
 		PRINTFORMW 身体の疼きに負け、%타겟은% 自慰にふけっていった。
 	ENDIF
-;非처녀
+;비처녀
 ELSE
 	IF ABL:자위중독 >= 4
 		PRINTFORML 「んあっ！　きもち、いい……」
